syntax = "proto3";
package ru.otus;
option java_multiple_files = true;

message GeneratingNumbersRequest {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message GeneratingNumbersResponse {
  int64 number = 1;
}

service GeneratingNumbersService {
  rpc getNumbers(GeneratingNumbersRequest) returns (stream GeneratingNumbersResponse) {};
}